# CUDA-OLCF

./: README.md
Module1/: README.md
Module1/1/: CMakeLists.txt  Hello.h.in  Parameters.h  main.cpp
Module1/1/solvers/factory/: SolverFactory.h
Module1/1/solvers/include/: GpuHello.h  OmpHello.h  SerialHello.h
Module1/1/solvers/interface/: IHello.h
Module1/1/solvers/src/: CMakeLists.txt  GpuHello.cu  GpuHello.hip  OmpHello.cpp  SerialHello.cpp
Module1/2/: Parameters.h  VectorAdd.h.in  main.cpp
Module1/2/solvers/include/: VectorAddCPU.h  VectorAddGPU.h
Module1/2/solvers/interface/: IVectorAdd.h
Module1/2/solvers/src/: VectorAddCPU.cpp  VectorAddGPU.hip
Module1/2/utilities/: GpuCommon.h
Module1/2/utilities/src/: WarmupGPU.cu
Module1/3/: CMakeLists.txt  Parameters.h  main.cpp
Module1/3/solvers/factory/: MatrixMultFactory.h
Module1/3/solvers/include/: MatrixMultBlas.h  MatrixMultCPU.h  MatrixMultGPU.h
Module1/3/solvers/src/: CMakeLists.txt  MatrixMultBlas.cpp  MatrixMultCPU.cpp  MatrixMultGPU.cu  MatrixMultGPU.hip
Module1/3/utilities/: WarmupSetup.h
Module1/3/utilities/include/: GpuCommon.h
Module1/3/utilities/src/: RandomVectorGenerator.cpp  WarmupGPU.cu
Module2/: README.md
Module2/1/: CMakeLists.txt  Parameters.h  Stencil.in  main.cpp
Module2/1/solvers/factory/: StencilFactory.h
Module2/1/solvers/include/: StencilCPU.h  StencilGPU.h  StencilOmp.h
Module2/1/solvers/interface/: IStencil.h
Module2/1/solvers/src/: CMakeLists.txt  StencilCPU.cpp  StencilGPU.cu  StencilGPU.hip  StencilOmp.cpp
Module2/1/utilities/: CMakeLists.txt  PrintVector.cpp  PrintVector.h  WarmupGPU.cu  WarmupSetup.h
Module2/1/utilities/src/: MaxError.cpp  PrintVector.cpp  WarmupGPU.cu
Module2/2/: MatrixMult.h.in  Parameters.h  main.cpp
Module2/2/solvers/factory/: MatrixMultFactory.h
Module2/2/solvers/include/: BlasGPU.h  BlockedCPU.h  MatrixMultGPU.h  MatrixMultShared.h  OmpCPU.h  OuterCPU.h  ReorderedCPU.h
Module2/2/solvers/interface/: IMatrixMult.h
Module2/2/solvers/src/: BlasGPU.cu  BlasGPU.hip  BlockedCPU.cpp  CMakeLists.txt  MatrixMultBlas.cpp  MatrixMultCPU.cpp  MatrixMultGPU.hip  MatrixMultShared.cu  MatrixMultShared.hip  OmpCPU.cpp  OuterCPU.cpp  ReorderedCPU.cpp
Module2/2/utilities/: CMakeLists.txt  GpuCommon.h  PrintVector.cpp  WarmupGPU.h  WarmupSetup.h
Module2/2/utilities/include/: PrintVector.h
Module2/2/utilities/src/: PrintVector.cpp  WarmupGPU.cu  WarmupGPU.hip
Module3/: README.md
Module3/1/: CMakeLists.txt  Parameters.h  main.cpp
Module3/1/solvers/factory/: VectorAddFactory.h
Module3/1/solvers/include/: VectorAddGPU.h
Module3/1/solvers/src/: CMakeLists.txt  VectorAddGPU.cu  VectorAddGPU.hip
Module3/1/utilities/: Parameters.h  WarmupGPU.cu  WarmupGPU.h
Module3/1/utilities/include/: GpuCommon.h  WarmupGPU.h
Module3/1/utilities/src/: WarmupGPU.cu
Module3/2/NVIDIA/: Blocks72_Threads1024.ncu-rep
Module3/2/profile/: Blocks1152_Threads1024.ncu-rep  Blocks1152_Threads256.ncu-rep  Blocks160_Threads1024.ncu-rep  Blocks1_Threads1024.ncu-rep  Blocks1_Threads256.ncu-rep  Blocks288_Threads256.ncu-rep
Module3/2/profile/hw1/: hw1.ncu-proj
Module4/: README.md
Module4/1/: HW1.cu  Parameters.h  main.cpp
Module4/1/solvers/factory/: SolverFactory.h
Module4/1/solvers/include/: CpuSolver.h  GpuSolver.h
Module4/1/solvers/interface/: ISolver.h
Module4/1/solvers/src/: CpuSolver.cpp  GpuSolver.cu  GpuSolver.hip
Module4/1/utilities/include/: GpuCommon.h
Module4/2/: HW1.md  HW1.ncu-rep
Module4/2/profile/: profile.ncu-proj
Module5/: README.md
Module5/1/: Parameters.h  main.cpp
Module5/1/solvers/factory/: SolverFactory.h
Module5/1/solvers/include/: CpuOmp.h  CpuSolver.h  GpuNaive.h  GpuReduce.h  GpuReduceA.h  GpuSolver.h  GpuWarpShuffle.h
Module5/1/solvers/interface/: ISolver.h
Module5/1/solvers/src/: CpuOmp.cpp  CpuSolver.cpp  GpuNaive.cu  GpuReduce.cu  GpuReduceA.cu  GpuSolver.cu  GpuWarpShuffle.cu
Module5/1/utilities/include/: WarmupGPU.h
Module5/1/utilities/src/: PrintVector.cpp  Validate.cpp  WarmupGPU.cu
Module5/2/: Parameters.h  main.cpp
Module5/2/solvers/factory/: SolverFactory.h
Module5/2/solvers/include/: CpuOmp.h  CpuSolver.h  GpuReduce.h
Module5/2/solvers/interface/: ISolver.h
Module5/2/solvers/src/: CpuOmp.cpp  CpuSolver.cpp  GpuReduce.cu
Module5/2/utilities/include/: GpuCommon.h
Module5/2/utilities/src/: Validate.cpp
Module5/3/: Parameters.h  main.cpp
Module5/3/solvers/factory/: SolverFactory.h
Module5/3/solvers/include/: CpuSolver.h  GpuReduction.h
Module5/3/solvers/interface/: ISolver.h
Module5/3/solvers/src/: GpuReduction.cu
Module5/3/utilities/include/: GpuHeaders.h  Validate.h
Module5/3/utilities/src/: PrintVector.cpp  Validate.cpp
Module6/: README.md
Module7/: README.md
Module7/1/: Parameters.h  main.cpp
Module7/1/solvers/factory/: SolverFactory.h
Module7/1/solvers/include/: CpuSolver.h  GpuOverlap.h  GpuOverlapEvents.h  GpuSequential.h  GpuSequentialEvents.h
Module7/1/solvers/interface/: ISolver.h
Module7/1/solvers/src/: CpuSolver.cpp  GpuOverlap.cu  GpuOverlapEvents.cu  GpuSequential.cu  GpuSequentialEvents.cu
Module7/1/utilities/include/: GpuCommon.h  MaxError.h  RandomVectorGenerator.h  WarmupGPU.h
Module7/1/utilities/src/: RandomVectorGenerator.cpp
Module7/profiles/: report5.nsys-rep
Module8/: README.md
Module8/code/: Parameters.h  main.cpp
Module8/code/solvers/factory/: SolverFactory.h
Module8/code/solvers/include/: CpuSolver.h  GpuOriginal1.h  GpuOriginal2.h  GpuOriginal3.h  GpuSolver1.h  GpuSolver2.h  GpuSolver3.h
Module8/code/solvers/interface/: ISolver.h
Module8/code/solvers/src/: CMakeLists.txt  CpuSolver.cpp  GpuOriginal1.cu  GpuOriginal2.cu  GpuOriginal3.cu  GpuSolver1.cu  GpuSolver2.cu  GpuSolver3.cu
Module8/code/utilities/include/: PrintTensor.h  RandomVectorGenerator.h
Module8/code/utilities/src/: MaxError.cpp  (+2 more)
Module8/profile/: Task1_double.ncu-rep  Task1_float.ncu-rep  Task2_double.ncu-rep  Task2_float.ncu-rep  Task3_double.ncu-rep  Task3_float.ncu-rep
Profilers/AMD/: README.md
Profilers/NVIDIA/: README.md
(+18 files in other folders)
